--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,14 @@
 body{
     margin:0;
     font-family: arial,Helvetica, sans-serif;
-    background:#eeeeff;
+    background: url('../img/1.jpeg') no-repeat;
+    background-size:cover; 
+    overflow: hidden;
+}
+.cover{
+    min-height:100vh;
+    width:100vw;
+    background: rgba(200,255,255,0.8);
 }
 button{
     color:white;
@@ -18,7 +25,8 @@ button:hover{
     font-size: 55px;
     color:#0066ff;
     font-weight: normal;
-    margin-top:100px;
+    padding:100px;
+    margin:0;
 }
 input{
     padding:10px;
