--- a/css/style2.css
+++ b/css/style2.css
@@ -2,6 +2,14 @@ body{
     margin:0;
     font-family: arial,Helvetica, sans-serif;
     box-sizing: border-box;
+    background: url('../img/2.jpeg') no-repeat;
+    background-size:cover; 
+    background-attachment: fixed;
+}
+.cover{
+    min-height:100vh;
+    width:100vw;
+    background: rgba(255,255,255,0.8);
 }
 a{
     color:#0066ff;
@@ -25,7 +33,7 @@ button:hover{
 #head{
     width:60%;
     margin: auto;
-    margin-top:100px;
+    padding-top:100px;
 }
 #head img{
     width:200px;
@@ -43,7 +51,7 @@ button:hover{
 #cardhold .card{
     min-height: 200px;
     padding:40px 30px;
-    background: rgba(0,0,0,0.1);
+    background: rgba(255,255,255,0.8);
     transition: all 0.2s ease-in-out;
 }
 #cardhold .card:hover{
